# mlib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  file.txt  log.txt
Logger/: CMakeLists.txt  Errors.cpp  Exception.hpp  Logger.hpp  Result.hpp
Logger/details/: ConsoleColor.hpp  Console_color.hpp  ErrorCode.hpp  ErrorGen.hpp  Error_code.hpp  Error_gen.hpp  File.hpp  SourcePosition.hpp  Source_position.hpp
Logger/include/: ConsoleColor.hpp  Error.hpp  ErrorGen.hpp  File.hpp  Logger.hpp  SourcePosition.hpp
Utils/: CMakeLists.txt  Defer.hpp  IO.cpp  Types.hpp  Utils.hpp
Utils/include/: Types.hpp  Utils.hpp
example/: main.cpp
examples/: CMakeLists.txt  Defer.cpp  Errors.cpp  IO.cpp
headers/: BinaryTree.hpp  Error.hpp  ErrorGen.hpp  Errors.hpp  GeneralBuffer.hpp  Hash.hpp  HashTable.hpp  HashTable.tpp  LinkedList.hpp  String.hpp  Utils.hpp  Vector.hpp
include/: Error.hpp  Types.hpp  Utils.hpp
src/: CRC32 with loop unrolling.asm  Error.cpp  Errors.cpp  Hash.cpp  String.cpp  Utils.cpp
tests/: Tests.cpp  Tests.hpp
